[gd_scene load_steps=18 format=3 uid="uid://bp8ynvnc2q5yr"]

[ext_resource type="PackedScene" uid="uid://d00tpeoapds2x" path="res://scenes/game.tscn" id="1_61dwd"]
[ext_resource type="Script" path="res://scripts/ux.gd" id="1_a2iyy"]
[ext_resource type="Theme" uid="uid://buebfocw76opc" path="res://themes/LeftSideTheme.tres" id="2_lfeh7"]
[ext_resource type="LabelSettings" uid="uid://uey5gvvoky1t" path="res://themes/bigLabels.tres" id="3_h53ll"]
[ext_resource type="LabelSettings" uid="uid://4cjg3daxlqop" path="res://themes/pLabels.tres" id="4_eu8v7"]
[ext_resource type="AudioStream" uid="uid://c8ihlm0gtw70x" path="res://Sound/pop.wav" id="4_xvvy2"]
[ext_resource type="Script" path="res://scripts/pop.gd" id="5_8e2ru"]
[ext_resource type="LabelSettings" uid="uid://dir4bfm0u0cid" path="res://themes/graphicsLabels.tres" id="5_c5uhm"]
[ext_resource type="Script" path="res://scripts/SaveList.gd" id="7_nbe2o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6gl0"]
bg_color = Color(0.286275, 0.286275, 0.286275, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wphjr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bio5a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqkg4"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.027451, 0.0431373, 0.0784314, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_lv2aa"]
Button/styles/normal = SubResource("StyleBoxFlat_nqkg4")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ede0e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pn3fk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vld8p"]
bg_color = Color(0.286275, 0.286275, 0.286275, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_a2iyy")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="leftBG" type="ScrollContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.13
theme_override_styles/panel = SubResource("StyleBoxFlat_g6gl0")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/leftBG"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("2_lfeh7")

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Parameters"
label_settings = ExtResource("3_h53ll")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="slider" type="VBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider"]
layout_mode = 2
size_flags_vertical = 1
text = "A"
label_settings = ExtResource("4_eu8v7")
horizontal_alignment = 1

[node name="SliderVal1" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider"]
layout_mode = 2
size_flags_vertical = 1
text = "x"
label_settings = ExtResource("4_eu8v7")
horizontal_alignment = 1

[node name="VSlider1" type="VSlider" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 26.0
scrollable = false
tick_count = 27
ticks_on_borders = true

[node name="slider2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider2"]
layout_mode = 2
size_flags_vertical = 1
text = "B"
label_settings = ExtResource("4_eu8v7")
horizontal_alignment = 1

[node name="SliderVal2" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider2"]
layout_mode = 2
size_flags_vertical = 1
text = "x"
label_settings = ExtResource("4_eu8v7")
horizontal_alignment = 1

[node name="VSlider2" type="VSlider" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider2"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 26.0
scrollable = false
tick_count = 27
ticks_on_borders = true

[node name="slider3" type="VBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider3"]
layout_mode = 2
size_flags_vertical = 1
text = "C"
label_settings = ExtResource("4_eu8v7")
horizontal_alignment = 1

[node name="SliderVal3" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider3"]
layout_mode = 2
size_flags_vertical = 1
text = "x"
label_settings = ExtResource("4_eu8v7")
horizontal_alignment = 1

[node name="VSlider3" type="VSlider" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider3"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 26.0
scrollable = false
tick_count = 27
ticks_on_borders = true

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 17
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="WorldSize" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "World Size: 30x30
"
horizontal_alignment = 1

[node name="boundSlider" type="HSlider" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
step = 2.0
value = 3.0
scrollable = false
tick_count = 25
ticks_on_borders = true

[node name="HSeparator6" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 17
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="TickTime" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Minimum Simulation Tick: 0.2s"
horizontal_alignment = 1

[node name="tickslider" type="HSlider" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.1
scrollable = false
tick_count = 10
ticks_on_borders = true

[node name="HSeparator8" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 17
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="cpu_gpu_box" type="HBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/cpu_gpu_box"]
layout_mode = 2
text = "GPU Compute Mode:"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/cpu_gpu_box"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="compute" type="CheckButton" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/cpu_gpu_box"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HSeparator9" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 17
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reset Cells"

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 17
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="Graphics" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Graphics"
label_settings = ExtResource("3_h53ll")
horizontal_alignment = 1

[node name="shadowsHbox" type="HBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Controls how nice the shadows look."
alignment = 2

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/shadowsHbox"]
layout_mode = 2
size_flags_horizontal = 2
text = "Shadows"
label_settings = ExtResource("5_c5uhm")
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/shadowsHbox"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_bio5a")

[node name="shadow" type="OptionButton" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/shadowsHbox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_lv2aa")
alignment = 1
item_count = 3
selected = 1
popup/item_0/text = "High"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Off"
popup/item_2/id = 2

[node name="GraphicsSep" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="AAHbox" type="HBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Reduces sharp, pixelated edges."
alignment = 2

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/AAHbox"]
layout_mode = 2
size_flags_horizontal = 2
text = "Antialiasing"
label_settings = ExtResource("5_c5uhm")
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/AAHbox"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_ede0e")

[node name="aa" type="OptionButton" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/AAHbox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_lv2aa")
alignment = 1
item_count = 3
selected = 2
popup/item_0/text = "4X"
popup/item_0/id = 0
popup/item_1/text = "2X"
popup/item_1/id = 1
popup/item_2/text = "Off"
popup/item_2/id = 2

[node name="GraphicsSep2" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="ScalingHbox" type="HBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Sets the resolution scale of the render window."
alignment = 2

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/ScalingHbox"]
layout_mode = 2
size_flags_horizontal = 2
text = "Resolution"
label_settings = ExtResource("5_c5uhm")
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/ScalingHbox"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_ede0e")

[node name="scaling" type="OptionButton" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/ScalingHbox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_lv2aa")
alignment = 1
item_count = 3
selected = 1
popup/item_0/text = "1.25x"
popup/item_0/id = 0
popup/item_1/text = "1x"
popup/item_1/id = 1
popup/item_2/text = "0.75x"
popup/item_2/id = 2

[node name="GraphicsSep3" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="LightingHbox2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Sets the resolution scale of the render window."
alignment = 2

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/LightingHbox2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Lighting
"
label_settings = ExtResource("5_c5uhm")
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/LightingHbox2"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_ede0e")

[node name="lighting" type="OptionButton" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/LightingHbox2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_lv2aa")
alignment = 1
item_count = 2
selected = 1
popup/item_0/text = "Fancy"
popup/item_0/id = 0
popup/item_1/text = "Fast"
popup/item_1/id = 1

[node name="GraphicsSep4" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="DrawModeHbox" type="HBoxContainer" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Sets the resolution scale of the render window."
alignment = 2

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/DrawModeHbox"]
layout_mode = 2
size_flags_horizontal = 2
text = "Draw Mode
"
label_settings = ExtResource("5_c5uhm")
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/DrawModeHbox"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_ede0e")

[node name="DrawMode" type="OptionButton" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/DrawModeHbox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_lv2aa")
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "Regular"
popup/item_0/id = 0
popup/item_1/text = "Overdraw"
popup/item_1/id = 1

[node name="HSeparator7" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 17
theme_override_styles/separator = SubResource("StyleBoxEmpty_wphjr")

[node name="Rules" type="Label" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rules
"
label_settings = ExtResource("3_h53ll")
horizontal_alignment = 1

[node name="Desc" type="RichTextLabel" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "There are two types of cells, full and empty. Each cell follows these rules:

1. A full cell remains full if it has between A and B full neighbors. Otherwise it becomes empty.

2. An empty cell becomes full if it has exactly C full neighbors."
fit_content = true

[node name="QuitSep" type="HSeparator" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_pn3fk")

[node name="Button2" type="Button" parent="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Quit
"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2

[node name="gameBG" type="ColorRect" parent="PanelContainer/HBoxContainer/AspectRatioContainer"]
layout_mode = 2
mouse_filter = 1
color = Color(0.0823529, 0.109804, 0.164706, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer/HBoxContainer/AspectRatioContainer/gameBG"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PanelContainer/HBoxContainer/AspectRatioContainer/gameBG/SubViewportContainer"]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1440, 1440)
render_target_update_mode = 4

[node name="Node3D" parent="PanelContainer/HBoxContainer/AspectRatioContainer/gameBG/SubViewportContainer/SubViewport" instance=ExtResource("1_61dwd")]

[node name="rightBG" type="ScrollContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_vld8p")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/rightBG"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/rightBG/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_lfeh7")

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/rightBG/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Saves"
label_settings = ExtResource("3_h53ll")
horizontal_alignment = 1

[node name="border" type="HSeparator" parent="PanelContainer/HBoxContainer/rightBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_pn3fk")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/rightBG/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="SaveList" type="VBoxContainer" parent="PanelContainer/HBoxContainer/rightBG/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7_nbe2o")

[node name="border2" type="HSeparator" parent="PanelContainer/HBoxContainer/rightBG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_pn3fk")

[node name="SaveButton" type="Button" parent="PanelContainer/HBoxContainer/rightBG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
disabled = true
text = "Save Selection"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xvvy2")
volume_db = -6.903
pitch_scale = 0.39
max_polyphony = 5
script = ExtResource("5_8e2ru")

[connection signal="build" from="." to="PanelContainer/HBoxContainer/AspectRatioContainer/gameBG/SubViewportContainer/SubViewport/Node3D" method="_on_control_build"]
[connection signal="go" from="." to="PanelContainer/HBoxContainer/AspectRatioContainer/gameBG/SubViewportContainer/SubViewport/Node3D" method="_on_control_go"]
[connection signal="stop" from="." to="PanelContainer/HBoxContainer/AspectRatioContainer/gameBG/SubViewportContainer/SubViewport/Node3D" method="_on_control_stop"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider/VSlider1" to="." method="_on_v_slider_1_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider/VSlider1" to="AudioStreamPlayer" method="_on_v_slider_1_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider2/VSlider2" to="." method="_on_v_slider_2_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider2/VSlider2" to="AudioStreamPlayer" method="_on_v_slider_2_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider3/VSlider3" to="." method="_on_v_slider_3_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/HBoxContainer/slider3/VSlider3" to="AudioStreamPlayer" method="_on_v_slider_3_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/boundSlider" to="." method="_on_bound_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/tickslider" to="." method="_on_tickslider_value_changed"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/cpu_gpu_box/compute" to="." method="_on_compute_toggled"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/shadowsHbox/shadow" to="." method="_on_shadow_item_selected"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/AAHbox/aa" to="." method="_on_aa_item_selected"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/ScalingHbox/scaling" to="." method="_on_scaling_item_selected"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/LightingHbox2/lighting" to="." method="_on_lighting_item_selected"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/DrawModeHbox/DrawMode" to="." method="_on_draw_mode_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/leftBG/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/AspectRatioContainer" to="." method="_on_aspect_ratio_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/HBoxContainer/AspectRatioContainer" to="." method="_on_aspect_ratio_container_mouse_exited"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/rightBG/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
